force-app/main/default/objects/Account/fields/Agreement_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sign_Date__c</fullName>
    <label>Agreement Sign Date</label>
    <type>Date</type>
</CustomField>