force-app/main/default/objects/Account/fields/Board_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Board_Line_Number__c</fullName>
    <label>Board Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>