force-app/main/default/objects/Account/fields/Current_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Current_Remarks__c</fullName>
    <label>Current Remarks</label>
    <type>TextArea</type>
</CustomField>