force-app/main/default/objects/Account/fields/Estimated_Turn_Over__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Turn_Over__c</fullName>
    <label>Estimated Turn Over</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>