force-app/main/default/objects/Account/fields/Expected_Business_In_Month__c.field-meta.xml
<CustomField>
    <fullName>Expected_Business_In_Month__c</fullName>
    <label>Expected Business-In Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>