force-app/main/default/objects/Account/fields/Expected_Business_In_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Expected_Business_In_Quarterly__c</fullName>
    <label>Expected Business- In Quarterly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>