force-app/main/default/objects/Account/fields/Expected_Time_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Expected_Time_of_Business__c</fullName>
    <label>Expected Time of Business</label>
    <type>Date</type>
</CustomField>