force-app/main/default/objects/Account/fields/First_Call__c.field-meta.xml
<CustomField>
    <fullName>First_Call__c</fullName>
    <label>First Call</label>
    <type>Date</type>
</CustomField>