force-app/main/default/objects/Account/fields/Follow_Up_Call__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Call__c</fullName>
    <label>Follow Up Call</label>
    <type>Date</type>
</CustomField>