force-app/main/default/objects/Account/fields/Level_Of_Office__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Office__c</fullName>
    <label>Level Of Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>