force-app/main/default/objects/Account/fields/Main_Business__c.field-meta.xml
<CustomField>
    <fullName>Main_Business__c</fullName>
    <label>Main Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>