force-app/main/default/objects/Account/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Reference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Research</fullName>
            </value>
            <value>
                <fullName>Corporate Seminar</fullName>
            </value>
            <value>
                <fullName>International Meets</fullName>
            </value>
            <value>
                <fullName>Own References</fullName>
            </value>
            <value>
                <fullName>Market References</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>