force-app/main/default/objects/Account/fields/Service_Pitched__c.field-meta.xml
<CustomField>
    <fullName>Service_Pitched__c</fullName>
    <label>Service Pitched</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sub_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fine Art Packing &amp; Handling</fullName>
            </value>
            <value>
                <fullName>Art &amp; Antique storage</fullName>
            </value>
            <value>
                <fullName>Fine Art Logistic</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>2 Wheeler</fullName>
            </value>
            <value>
                <fullName>4 Wheeler</fullName>
            </value>
            <value>
                <fullName>IT /Non IT</fullName>
            </value>
            <value>
                <fullName>IT Asset Relocation</fullName>
            </value>
            <value>
                <fullName>Industry Relocation</fullName>
            </value>
            <value>
                <fullName>Lab Relocation</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Scrap Management</fullName>
            </value>
            <value>
                <fullName>E Waste Management</fullName>
            </value>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>Long Term</fullName>
            </value>
            <value>
                <fullName>Self Storage</fullName>
            </value>
            <value>
                <fullName>3 PL</fullName>
            </value>
            <value>
                <fullName>4 PL</fullName>
            </value>
            <value>
                <fullName>Warehousing &amp; Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>