force-app/main/default/objects/Account/fields/Sub_Business__c.field-meta.xml
<CustomField>
    <fullName>Sub_Business__c</fullName>
    <label>Sub Business</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>IT Relocation</fullName>
            </value>
            <value>
                <fullName>Fine Art</fullName>
            </value>
            <value>
                <fullName>Lab Relocation</fullName>
            </value>
            <value>
                <fullName>Office Relocation</fullName>
            </value>
            <value>
                <fullName>Industry Relocation</fullName>
            </value>
            <value>
                <fullName>Pet Relocation</fullName>
            </value>
            <value>
                <fullName>Automobile Relocation</fullName>
            </value>
            <value>
                <fullName>Door to Door</fullName>
            </value>
            <value>
                <fullName>Door to Port</fullName>
            </value>
            <value>
                <fullName>Port to Door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>