force-app/main/default/objects/Account/validationRules/Agreement_sign_date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Agreement_sign_date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Agreement_Sign_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Agreement_Sign_Date__c</errorDisplayField>
    <errorMessage>Past Date is not allowed</errorMessage>
</ValidationRule>