force-app/main/default/objects/Account/validationRules/Expected_time_of_business.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_time_of_business</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Time_of_Business__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Expected_Time_of_Business__c</errorDisplayField>
    <errorMessage>Past date is not allowed</errorMessage>
</ValidationRule>