force-app/main/default/objects/Account/validationRules/First_Call_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Call_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>First_Call__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>First_Call__c</errorDisplayField>
    <errorMessage>Past Date is not allowed</errorMessage>
</ValidationRule>