force-app/main/default/objects/Account/validationRules/Follow_Up_call_past_date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up_call_past_date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Follow_Up_Call__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Follow_Up_Call__c</errorDisplayField>
    <errorMessage>Past Date is not allowed</errorMessage>
</ValidationRule>