force-app/main/default/objects/Account/validationRules/Followup_should_not_before_first_call.validationRule-meta.xml
<ValidationRule>
    <fullName>Followup_should_not_before_first_call</fullName>
    <active>true</active>
    <errorConditionFormula>First_Call__c   &gt;   Follow_Up_Call__c</errorConditionFormula>
    <errorDisplayField>Follow_Up_Call__c</errorDisplayField>
    <errorMessage>Followup call can  not be before First call</errorMessage>
</ValidationRule>