force-app/main/default/objects/Account/validationRules/Past_date_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Past_date_is_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Meeting_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Meeting_Date__c</errorDisplayField>
    <errorMessage>Past date is not allowed</errorMessage>
</ValidationRule>