force-app/main/default/objects/Account/validationRules/Renewal_Date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Renewal_Date__c &lt;  Agreement_Sign_Date__c</errorConditionFormula>
    <errorDisplayField>Renewal_Date__c</errorDisplayField>
    <errorMessage>Renewal Date cannot be before Agreement Sign Date</errorMessage>
</ValidationRule>