force-app/main/default/objects/Account/validationRules/Renewal_Past_Date_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Past_Date_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Renewal_Date__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Renewal_Date__c</errorDisplayField>
    <errorMessage>Past Date is not allowed</errorMessage>
</ValidationRule>